  _____ _    _ __  __  _____          
 / ____| |  | |  \/  |/ ____|   /\    
| |  __| |  | | \  / | |  __   /  \   
| | |_ | |  | | |\/| | | |_ | / /\ \  
| |__| | |__| | |  | | |__| |/ ____ \ 
 \_____|\____/|_|  |_|\_____/_/    \_\

=======================================
Framework Backend
1.5.18

1.5.17
  - Adicionado FieldErrors no GumgaRunTimeException

1.5.15
  - Melhora nas mensagens quando a comunicação com o segurança está indisponível
  - Inclusão no GumgaAddres do atributo stateCode
      **************** IMPORTANTE QUEBRA DE COMPILAÇÂO *********************
      @Columns(columns = {
             @Column(name = "cod_postal"),
             @Column(name = "tipo_logradouro"),
             @Column(name = "logradouro"),
             @Column(name = "numero"),
             @Column(name = "informacao"),
             @Column(name = "bairro"),
             @Column(name = "localizacao"),
             @Column(name = "estado"),
             @Column(name = "cidade"),
             @Column(name = "latitude"),
             @Column(name = "longitude"),
             @Column(name = "formalCode")
             //ADICIONAR
             @Column(name = "stateCode")
             //FIM ADICIONAR
         })
         private GumgaAddress endereco;

1.5.13
 Compartilhamento por dono de instância


1.5.12
 gumgaValues.isOracleAdjust() 

1.5.7
  Delete in Batch
  Delete Collection
  QueryAction
  MultiAction
  GumgaBoolean unittests
  
1.5.6
  App Token
  


1.5.5
    - Criado um DTO para criar instancia no security
    - Criado um proxy para api/security-saas

1.5.3

    RestTemplate -> GumgaJsonRestTemplate
    LogicalDelete -> TestCases


1.5.2
  - Permite desligar o GumgaNLP colocando NO_GumgaNLP no gumgaValues.getGumgaNLPBasePackage() por exemplo:

    @Override
    public String getGumgaNLPBasePackage() {
        return GumgaNLP.NO_GUMGANLP;
    }


1.5.1 